# tflite-builder

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setupenv
.github/workflows/: build-tflite.yml  ci.yml
configs/: aarch64.json  x86-64.json
docs/: index.md  model.md
models/: model.tflite
runner/: main.cpp
scripts/: cli.py  core.py  model.py
