[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tflite-builder"
version = "0.1.0"
description = "TensorFlow clone and build helper for CMake and Bazel."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache License 2.0" }
keywords = ["tensorflow", "bazel", "cmake", "build"]
dependencies = [
    "argcomplete>=3.6.3",
    "devtools[docs]>=0.1.0",
    "logging>=0.4.9.6",
    "plumbum>=2.0.1",
]

[project.scripts]
tf = "scripts.cli:main"
generate-model = "scripts.model:main"

[tool.setuptools]
packages = ["scripts"]

[tool.uv.sources]
devtools = { git = "https://github.com/Dakata99/devtools.git", rev = "main" }

[dependency-groups]
dev = ["devtools"]
modelgen = ["tensorflow"]

[egg_info]
egg_base = ".build"

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
pretty = true
warn_unused_configs = true

explicit_package_bases = true
namespace_packages = true

exclude = '''
(?x)(
    ^build/
    | ^dist/
    | ^\.venv/
    | ^\.mypy_cache/
    | ^\.ruff_cache/
    | ^led/web-client/
    | ^generated/
    | ^third_party/
)
'''
